YOU CAN KILL THE ENEMIES NOW

--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -13,6 +13,7 @@ properties: {
 //It then does a check to see if the hitpoints have reached 0.
 //If it has, then the current object dies.
 get_hurt: "def()[add(hitpoints, -collide_with.damage),
+			//debug(hitpoints),
 			damage_flash(),
 			if(hitpoints <= 0, die())
 			]",
