--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -171,11 +171,13 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 	object_type: [{
 		id:"punch_proj",
 		on_create:"schedule(4,die())",
+		on_collide_object:"die()", //if it hits something, get rid of the punch
 		animation: [{
 			id:"normal",
 			image: "playable/miyamoto-sheet.png",
 			rect: [1,109,10,118],
-			attack_area: "all", 	
+			attack_area: "all", 
+			damage: 1, //how much damage it does. Can change later. Maybe stronger punches can do more damage.
 			}]
 		}
 	]
