Fixed the hitbox problem

--- a/data/objects/enemies/test_enemy.cfg
+++ b/data/objects/enemies/test_enemy.cfg
@@ -1,9 +1,6 @@
 //Enemy behavior:
-/* Swoops up from below. Invulnerable and doesn't do damage during this time. 
-Flies down from above in a group pattern, will usually have 3 enemies in a single cluster. 
-Should be rather fast.   It basically does a Kamikaze attack, so this enemy does not fire.
-
-DO NOT PLACE THIS ENEMY ON THE LEVEL. USE ENEMYB_SPAWNER INSTEAD
+/*
+TO ADD LATER
 */
 
 /*STUFF TO FIX: 
@@ -29,10 +26,11 @@ properties: {},
 		id: "idle",
 		image: "enemies/enemy.png",
 		rect: [1, 37, 32, 69],
-		solid_area: [1, 1, 31, 31],
-		body_area:[1, 1, 31, 31],
+		solid_area: [8, 3, 26, 32],
+		body_area:[8, 3, 26, 32],
 		frames: 1,
 		"damage": 2,
+		accel_y: 40,
 		},
 		],
 
