--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -51,8 +51,8 @@ reset_color: "def() [
 //When this enemy blows up, spawn an explosion object for effect
 on_die: "sound('BombExplode.wav')",
 on_collide_object_body: "[[
-	if(collide_with_area = 'attack', 
-		get_hurt())], //if you are hit by a bullet, the get_hurt() function is called
+	if(collide_with_area = 'attack', [
+		debug('FUUUCK'),get_hurt()])], //if you are hit by a bullet, the get_hurt() function is called
 	 ]",
 		
 /*--SPAWNED OBJECTS--*/
