--- a/data/objects/enemies/test_enemy.cfg
+++ b/data/objects/enemies/test_enemy.cfg
@@ -27,7 +27,7 @@ properties: {},
 		image: "enemies/enemy.png",
 		rect: [1, 37, 32, 69],
 		solid_area: [8, 3, 26, 32],
-		body_area:[8, 3, 26, 32],
+		body_area:"all",
 		frames: 1,
 		"damage": 2,
 		accel_y: 40,
