ADDED A FUNCTIONING UPPERCUT, WUBBA LUBBA DUB DUB

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -13,8 +13,12 @@
 		type:"int",
 		default: 0,
 		},
+		last_uppercut: {
+		type:"int",
+		default: 0,
+		},
 		punch_finished:"cycle - last_punched > 16",
-		uppercut_finished:"cycle - last_punched > 32",
+		uppercut_finished:"cycle - last_uppercut > 24",
 		crouch_jump: {type: "int", default: -600},
 		standing_jump: -1000,
 		
@@ -29,29 +33,25 @@
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1']), //allows a list of excluded animations
+		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1','beginuppercut','uppercut','enduppercut']), //allows a list of excluded animations
 			[set(animation, 'stand')]),
 			
 		//-------------------------------CROUCHING-------------------------------
-		if ((ctrl_down and self.animation in ['stand','crouch','walk']), 
+		if ((ctrl_down and self.animation in ['stand','crouch','walk'] and self.animation not in ['punch1']), 
 	[
 			set(animation, 'crouch'),
 			set(velocity_x, 0)]),	
 		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1)]),
 		if ((ctrl_right and self.animation='crouch'),[ set(facing,1)]),
 		//-------------------------------ATTACKING-------------------------------
-		if(ctrl_tongue and animation != 'punch1' and is_standing and not animation in ['jump','fall'], 
+		if(ctrl_tongue and animation != 'punch1' and is_standing and not animation in ['jump','fall','crouch','beginuppercut','uppercut','enduppercut'], 
 			if(punch_finished,
 				[set(animation, 'punch1'),
 				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
 				set(velocity_x,0),
 				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
-		//if(ctrl_tongue and animation != 'uppercut' and is_standing and not animation in ['jump', 'fall'],
-			//if(uppercut_finished,
-				//[set(animation, 'uppercut'),
-				//set(last_punched, dump(cycle))],
-				//)),
+
 
 	
 			//-GROUND ATTACKS ****************************************************************************************
@@ -59,9 +59,15 @@
 			//-BOOMERANG *********************************************************************************************
 
 	]",
-	on_ctrl_tongue:"if(animation in ['jump','fall'] and velocity_x = 0,
-		set(animation, 'jumping_kick'))",
+	on_ctrl_tongue:"[if(animation in ['jump','fall'] and velocity_x = 0,
+		set(animation, 'jumping_kick')),
 		
+		if(animation in ['crouch'],  
+			if(uppercut_finished,
+				[set(animation, 'beginuppercut'), set(last_punched, dump(cycle)), debug('beginuppercut')],
+				),
+			),
+		]",
 
 //-------------------------------JUMPING---------------------------------			
 on_ctrl_jump:"[if(is_standing and punch_finished, 
@@ -78,12 +84,17 @@ on_enter_prejump_anim:"debug('entering jump')",
 
 
 
-//---
+//---------------------ON END ANIMATION ---------------------------------------
+	//--ATTACK ANIMATIONS
+	on_end_beginuppercut_anim:"set(animation, 'uppercut')",
+	on_end_uppercut_anim:"set(animation, 'enduppercut')",
+	on_end_enduppercut_anim:"set(animation, 'crouch')",
+
 on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
 on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
 on_end_prejump_anim:"set(animation,'jump')",
-on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
+on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0)]",
 	
 	animation: [
 		{
@@ -147,11 +158,28 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 		duration: 4,
 		},
 		{
-		id: "uppercut",
+		id: "beginuppercut",
 		rect: [1,325,32,362],
-		frames:4,
-		frames_per_row: 4,
-		duration: 4,
+		solid_area: [20,37,10,5],
+		frames:2,
+		frames_per_row: 2,
+		duration: 2,
+		},
+		{
+		id: "uppercut",
+		rect: [71,325,102,362],
+		solid_area: [20,37,10,5],
+		frames:1,
+		frames_per_row: 1,
+		duration: 15,
+		},
+		{
+		id: "enduppercut",
+		rect: [106,325,137,362],
+		solid_area: [20,37,10,5],
+		frames:1,
+		frames_per_row: 1,
+		duration: 5,
 		},
 		{
 		id: "flying_kick",
