Fixed the jump kick bug and added a flying jump kick

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -54,14 +54,18 @@
 
 
 	
-			//-GROUND ATTACKS ****************************************************************************************
-			//-AERIAL ATTACKS ****************************************************************************************
+
+
 			//-BOOMERANG *********************************************************************************************
 
 	]",
-	on_ctrl_tongue:"[if(animation in ['jump','fall'] and velocity_x = 0,
-		set(animation, 'jumping_kick')),
-		
+	on_ctrl_tongue:"[
+//-AERIAL ATTACKS ****************************************************************************************
+		if(animation in ['prejump','jump','fall'] and velocity_x = 0,
+			set(animation, 'jumping_kick')), //Jumping kick attack when there's no momentum
+		if(animation in ['prejump','jump','fall'] and velocity_x != 0,
+			set(animation,'flying_kick')), //Flying kick attack when there is momentum
+//-GROUND ATTACKS ****************************************************************************************
 		if(animation in ['crouch'],  
 			if(uppercut_finished,
 				[set(animation, 'beginuppercut'), set(last_punched, dump(cycle)), debug('beginuppercut')],
@@ -90,7 +94,8 @@ on_enter_prejump_anim:"debug('entering jump')",
 	on_end_uppercut_anim:"set(animation, 'enduppercut')",
 	on_end_enduppercut_anim:"set(animation, 'crouch')",
 
-on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
+on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),)",
+//set(animation,animation))", //continues the animation
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
 on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
 on_end_prejump_anim:"set(animation,'jump')",
