Added keypress detection for stomps

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -57,7 +57,6 @@
 
 
 			//-BOOMERANG *********************************************************************************************
-
 	]",
 	on_ctrl_tongue:"[
 //-AERIAL ATTACKS ****************************************************************************************
@@ -83,6 +82,9 @@ on_ctrl_jump:"[if(is_standing and punch_finished,
 					if(self.animation in ['crouch'], 
 					set(velocity_y,crouch_jump), 
 				)])]",
+on_process_jump:"if(ctrl_keys=['d'], debug('Do the STOMP'))",
+on_process_fall:"if(ctrl_keys=['d'], debug('Do the STOMP'))",
+on_process_prejump:"if(ctrl_keys=['d'], debug('Do the STOMP'))",
 on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down, [set(velocity_y,standing_jump)])]",
 on_enter_prejump_anim:"debug('entering jump')",
 
