Added new animations to M's sheet.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "04503A70",
+			"_addr": "08E332C8",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -14,11 +14,11 @@
 			},
 			"type": "miyamoto_playable",
 			"x": 64,
-			"y": 224,
+			"y": 192,
 			"zorder": 0
 		},
 		{
-			"_addr": "044DD2C0",
+			"_addr": "08E24C68",
 			"current_frame": "normal",
 			"custom": 1,
 			"face_right": 0,
@@ -28,7 +28,7 @@
 			"y": 319
 		}
 	],
-	"dimensions": [0,0,1983,767],
+	"dimensions": [0,0,1983,2303],
 	"id": "titlescreen.cfg",
 	"music": "",
 	"preloads": "",
@@ -61,9 +61,52 @@
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
 ,
-,",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr",
 		"unique_tiles": ",dbr,dgr",
 		"variations": "",
 		"x": -96,
