--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -52,12 +52,8 @@
 				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
 
+]",
 
-	
-
-
-			//-BOOMERANG *********************************************************************************************
-	]",
 	on_ctrl_tongue:"[
 //-AERIAL ATTACKS ****************************************************************************************
 		if(animation in ['prejump','jump','fall'] and velocity_x = 0,
@@ -67,7 +63,7 @@
 //-GROUND ATTACKS ****************************************************************************************
 		if(animation in ['crouch'],  
 			if(uppercut_finished,
-				[set(animation, 'beginuppercut'), set(last_punched, dump(cycle)), debug('beginuppercut')],
+				[set(animation, 'beginuppercut'), set(last_punched, dump(cycle)), spawn('miyamoto_playable.uppercut_proj',mid_x+18*facing,mid_y-25,{facing:facing})],
 				),
 			),
 		]",
@@ -82,9 +78,6 @@ on_ctrl_jump:"[if(is_standing and punch_finished,
 					if(self.animation in ['crouch'], 
 					set(velocity_y,crouch_jump), 
 				)])]",
-on_process_jump:"if(ctrl_keys=['d'], debug('Do the STOMP'))",
-on_process_fall:"if(ctrl_keys=['d'], debug('Do the STOMP'))",
-on_process_prejump:"if(ctrl_keys=['d'], debug('Do the STOMP'))",
 on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down, [set(velocity_y,standing_jump)])]",
 on_enter_prejump_anim:"debug('entering jump')",
 
@@ -203,18 +196,36 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0)]",
 		duration: 3,
 		}
 	],
-	object_type: [{
+	object_type: [
+		{
 		id:"punch_proj",
 		on_create:"schedule(4,die())",
 		on_collide_object:"die()", //if it hits something, get rid of the punch
 		animation: [{
-			id:"normal",
+			id:"punch_proj_normal",
 			image: "playable/miyamoto-sheet.png",
 			rect: [1,109,10,118],
 			area: "all",
 			attack_area: "all", 
 			damage: 1, //how much damage it does. Can change later. Maybe stronger punches can do more damage.
-			}]
+			}],
+		},
+		{
+		id:"uppercut_proj",
+		on_create:"schedule(10,die())",
+		animation: [{
+			id:"uppercut_proj_normal",
+			image: "playable/miyamoto-sheet.png",
+			rect: [211,325,220,362],
+			frames: 5,
+			frames_per_row:5,
+			pad:3,
+			duration: 2,
+			area: "all",
+			attack_area: "all", 
+			damage: 1, //how much damage it does. Can change later. Maybe stronger punches can do more damage.
+			}],
 		}
+		
 	]
 }
