Added a stomp animation for M.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -194,7 +194,35 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0)]",
 		frames:2,
 		frames_per_row: 2,
 		duration: 3,
-		}
+		},
+		{
+		id: "beginstomp", // When the command is activated, there is an ever-so-slight delay wherein the character is suspended in midair before actually falling down toward the ground.
+    	rect: [1,407,32,439],
+		frames:1,
+		frames_per_row: 1,
+		duration: 4,
+		},
+		{
+		id: "fallstomp", // This is a lightning-fast drop to the ground. Will add afterimages at some point.
+    	rect: [37,407,68,439],
+		frames:1,
+		frames_per_row: 1,
+		duration: 1,
+		},
+		{
+		id: "landstomp", // The moment the player lands on the ground with a stomp. 
+        rect: [71,407,102,439],
+		frames:2,
+		frames_per_row: 2,
+		duration: 2,
+		},
+		{
+		id: "endstomp", // The end of the stomp animation.
+        rect: [141,407,172,439],
+		frames:4,
+		frames_per_row: 4,
+		duration: 6,
+		},
 	],
 	object_type: [
 		{
