Created a stomp attack

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -17,6 +17,10 @@
 		type:"int",
 		default: 0,
 		},
+		stompCount: {
+		type:"int",
+		default: 0,
+		},
 		punch_finished:"cycle - last_punched > 16",
 		uppercut_finished:"cycle - last_uppercut > 24",
 		crouch_jump: {type: "int", default: -600},
@@ -33,7 +37,7 @@
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1','beginuppercut','uppercut','enduppercut']), //allows a list of excluded animations
+		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1','beginuppercut','uppercut','enduppercut','landstomp','endstomp','fallstomp','landstomp']), //allows a list of excluded animations
 			[set(animation, 'stand')]),
 			
 		//-------------------------------CROUCHING-------------------------------
@@ -67,6 +71,9 @@
 				),
 			),
 		]",
+	on_process_jump:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
+	on_process_fall:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
+	on_process_prejump:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
 
 //-------------------------------JUMPING---------------------------------			
 on_ctrl_jump:"[if(is_standing and punch_finished, 
@@ -83,6 +90,7 @@ on_enter_prejump_anim:"debug('entering jump')",
 
 
 
+
 //---------------------ON END ANIMATION ---------------------------------------
 	//--ATTACK ANIMATIONS
 	on_end_beginuppercut_anim:"set(animation, 'uppercut')",
@@ -94,7 +102,22 @@ on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(a
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
 on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
 on_end_prejump_anim:"set(animation,'jump')",
-on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0)]",
+on_collide_feet:"[if(self.animation not in ['fallstomp','landstomp','endstomp'], 
+					[debug('going to stand'),set(animation,'stand'),set(velocity_x, 0)]),
+				if(self.animation in ['fallstomp'],[debug('Going to land!'),set(animation,'landstomp'), set(velocity_y,0),])
+				]",
+				
+//Modify the velocity_y below to change the speed of the fall.
+on_end_beginstomp_anim:"[set(animation,'fallstomp'),set(velocity_y,2000), set(velocity_x, 0)]",
+on_end_landstomp_anim:"[if(stompCount > 3,
+							[debug('ending landstomp'),set(animation,'endstomp'),set(stompCount, 0)]),
+						if(stompCount <= 3,
+							[debug('continuing landstomp'), 
+							set(stompCount, stompCount+1), 
+							set(animation, 'landstomp')])
+	]",
+on_end_endstomp_anim:"set(animation,'stand')",
+
 	
 	animation: [
 		{
@@ -201,6 +224,7 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0)]",
 		frames:1,
 		frames_per_row: 1,
 		duration: 4,
+		velocity_x: 0,
 		},
 		{
 		id: "fallstomp", // This is a lightning-fast drop to the ground. Will add afterimages at some point.
