Added a knife enemy graphic, updated M's hurt/death frames, and added Killah Bee's base sprites.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -1,9 +1,9 @@
 {
-	"air_resistance": 20,
+	"air_resistance": 100,
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "08E26CC8",
+			"_addr": "0A56A808",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -13,22 +13,52 @@
 				"objects": []
 			},
 			"type": "miyamoto_playable",
-			"x": 64,
-			"y": 192,
+			"x": -352,
+			"y": 319,
 			"zorder": 0
 		},
 		{
-			"_addr": "04355588",
+			"_addr": "05A55528",
 			"current_frame": "normal",
 			"custom": 1,
 			"face_right": 0,
-			"label": "_7ffd",
+			"label": "_3ead",
 			"type": "test_enemy",
-			"x": 192,
+			"x": 224,
+			"y": 319
+		},
+		{
+			"_addr": "0A9819C0",
+			"current_frame": "normal",
+			"custom": 1,
+			"face_right": 0,
+			"label": "_a73",
+			"type": "test_enemy",
+			"x": 160,
+			"y": 319
+		},
+		{
+			"_addr": "0A9E8388",
+			"current_frame": "normal",
+			"custom": 1,
+			"face_right": 0,
+			"label": "_3a52",
+			"type": "test_enemy",
+			"x": 64,
+			"y": 319
+		},
+		{
+			"_addr": "0AAA8810",
+			"current_frame": "normal",
+			"custom": 1,
+			"face_right": 0,
+			"label": "_4488",
+			"type": "test_enemy",
+			"x": -32,
 			"y": 319
 		}
 	],
-	"dimensions": [0,0,1983,2303],
+	"dimensions": [-384,0,1983,2303],
 	"id": "titlescreen.cfg",
 	"music": "",
 	"preloads": "",
@@ -42,21 +72,21 @@
 		"tiles": ",
 ,
 ,
-,,dbr
-,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
-,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,,,,,dgr,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,,,,,dgr,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
-,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dgr,,,,,,,,,,,,,,,,,,,,,dgr,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dgr,,,,,,,,,,,,,,,,,,,,,dgr,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
 ,
 ,
 ,
@@ -106,10 +136,10 @@
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr",
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr",
 		"unique_tiles": ",dbr,dgr",
 		"variations": "",
-		"x": -96,
+		"x": -384,
 		"x_speed": 100,
 		"y": 0,
 		"y_speed": 100,
