--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -9,7 +9,7 @@
 	
 	properties:{
 	
-		last_punched: {
+		last_attacked: {
 		type:"int",
 		default: 0,
 		},
@@ -21,24 +21,32 @@
 		type:"int",
 		default: 0,
 		},
-		punch_finished:"cycle - last_punched > 16",
+		last_stomped:{
+		type:"int",
+		default: 0,
+		},
+		punch_finished:"cycle - last_attacked > 16",
 		uppercut_finished:"cycle - last_uppercut > 24",
+		stomp_finished:"cycle - last_stomped > 32",
 		crouch_jump: {type: "int", default: -600},
 		standing_jump: -1000,
 		
 	},
 	on_process:"[
 		//------------------------------WALKING----------------------------------
-		if(ctrl_right and is_standing and punch_finished and animation != 'crouch', [
+		if(ctrl_right and is_standing and punch_finished and animation != ['crouch','endstomp','landstomp'], [
 			set(facing,1),
 			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
 			set(velocity_x, 300)]), 
-		if(ctrl_left and is_standing and punch_finished and animation != 'crouch',[
+		if(ctrl_left and is_standing and punch_finished and animation != ['crouch','endstomp','landstomp'], [
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1','beginuppercut','uppercut','enduppercut','landstomp','endstomp','fallstomp','landstomp']), //allows a list of excluded animations
+		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1','beginuppercut','uppercut','enduppercut','landstomp','endstomp','fallstomp']), //allows a list of excluded animations
 			[set(animation, 'stand')]),
+			
+		if((ctrl_down and ctrl_tongue) and self.animation not in ['axehandle'] and self.animation in ['jump', 'fall'],
+			set(animation, 'axehandle')),
 			
 		//-------------------------------CROUCHING-------------------------------
 		if ((ctrl_down and self.animation in ['stand','crouch','walk'] and self.animation not in ['punch1']), 
@@ -48,13 +56,7 @@
 		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1)]),
 		if ((ctrl_right and self.animation='crouch'),[ set(facing,1)]),
 		//-------------------------------ATTACKING-------------------------------
-		if(ctrl_tongue and animation != 'punch1' and is_standing and not animation in ['jump','fall','crouch','beginuppercut','uppercut','enduppercut'], 
-			if(punch_finished,
-				[set(animation, 'punch1'),
-				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
-				set(velocity_x,0),
-				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
-			])),
+
 
 ]",
 
@@ -65,15 +67,26 @@
 		if(animation in ['prejump','jump','fall'] and velocity_x != 0,
 			set(animation,'flying_kick')), //Flying kick attack when there is momentum
 //-GROUND ATTACKS ****************************************************************************************
+		if(ctrl_tongue and animation != 'punch1' and is_standing and not animation in ['jump','fall','crouch','beginuppercut','uppercut','enduppercut'], 
+			if(punch_finished,
+				[set(animation, 'punch1'),
+				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
+				set(velocity_x,0),
+				set(last_attacked,cycle), //make it so that the player must press the attack button instead of holding it to repeat punching
+			])),
+		
 		if(animation in ['crouch'],  
 			if(uppercut_finished,
-				[set(animation, 'beginuppercut'), set(last_punched, dump(cycle)), spawn('miyamoto_playable.uppercut_proj',mid_x+18*facing,mid_y-25,{facing:facing})],
+				[set(animation, 'beginuppercut'), set(last_attacked,cycle), spawn('miyamoto_playable.uppercut_proj',mid_x+18*facing,mid_y-25,{facing:facing})],
 				),
 			),
 		]",
 	on_process_jump:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
+	
 	on_process_fall:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
 	on_process_prejump:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
+	
+
 
 //-------------------------------JUMPING---------------------------------			
 on_ctrl_jump:"[if(is_standing and punch_finished, 
@@ -86,7 +99,7 @@ on_ctrl_jump:"[if(is_standing and punch_finished,
 					set(velocity_y,crouch_jump), 
 				)])]",
 on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down, [set(velocity_y,standing_jump)])]",
-on_enter_prejump_anim:"debug('entering jump')",
+
 
 
 
@@ -97,24 +110,26 @@ on_enter_prejump_anim:"debug('entering jump')",
 	on_end_uppercut_anim:"set(animation, 'enduppercut')",
 	on_end_enduppercut_anim:"set(animation, 'crouch')",
 
-on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),)",
-//set(animation,animation))", //continues the animation
+on_end_axehandle_anim: "set(animation,'fall')",
+on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')))",
+on_end_walk_anim: "set(animation,animation)", //continues the animation
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
-on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
+on_end_jump_anim:"set(animation,'fall')",
 on_end_prejump_anim:"set(animation,'jump')",
 on_collide_feet:"[if(self.animation not in ['fallstomp','landstomp','endstomp'], 
-					[debug('going to stand'),set(animation,'stand'),set(velocity_x, 0)]),
-				if(self.animation in ['fallstomp'],[debug('Going to land!'),set(animation,'landstomp'), set(velocity_y,0),])
+					[set(animation,'stand'),set(velocity_x, 0)]),
+				if(self.animation in ['fallstomp'],[set(animation,'landstomp'),set(last_attacked,cycle),set(velocity_y,0)])
 				]",
 				
 //Modify the velocity_y below to change the speed of the fall.
 on_end_beginstomp_anim:"[set(animation,'fallstomp'),set(velocity_y,2000), set(velocity_x, 0)]",
 on_end_landstomp_anim:"[if(stompCount > 3,
-							[debug('ending landstomp'),set(animation,'endstomp'),set(stompCount, 0)]),
+							[set(animation,'endstomp'),set(stompCount, 0),set(last_attacked,cycle)]),
 						if(stompCount <= 3,
-							[debug('continuing landstomp'), 
+							[ 
 							set(stompCount, stompCount+1), 
-							set(animation, 'landstomp')])
+							set(animation, 'landstomp'),
+							])
 	]",
 on_end_endstomp_anim:"set(animation,'stand')",
 
@@ -219,6 +234,14 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		duration: 6,
 		},
 		{
+		id: "axehandle",
+		rect: [176,222,207,254],
+		solid_area: [20,37,10,5],
+		frames:2,
+		frames_per_row: 2,
+		duration: 5,
+		},
+		{
 		id: "beginstomp", // When the command is activated, there is an ever-so-slight delay wherein the character is suspended in midair before actually falling down toward the ground.
     	rect: [1,407,32,439],
 		frames:1,
@@ -228,7 +251,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		},
 		{
 		id: "fallstomp", // This is a lightning-fast drop to the ground. Will add afterimages at some point.
-    	rect: [37,407,68,439],
+    	rect: [37,407,67,439],
 		frames:1,
 		frames_per_row: 1,
 		duration: 1,
