Updated knife thug with more animations.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "0A56A808",
+			"_addr": "044D7B38",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -18,43 +18,12 @@
 			"zorder": 0
 		},
 		{
-			"_addr": "05A55528",
+			"_addr": "08F281B8",
 			"current_frame": "normal",
 			"custom": 1,
-			"face_right": 0,
-			"label": "_3ead",
-			"type": "test_enemy",
-			"x": 224,
-			"y": 319
-		},
-		{
-			"_addr": "0A9819C0",
-			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
-			"label": "_a73",
-			"type": "test_enemy",
-			"x": 160,
-			"y": 319
-		},
-		{
-			"_addr": "0A9E8388",
-			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
-			"label": "_3a52",
-			"type": "test_enemy",
-			"x": 64,
-			"y": 319
-		},
-		{
-			"_addr": "0AAA8810",
-			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
-			"label": "_4488",
-			"type": "test_enemy",
-			"x": -32,
+			"label": "_4022",
+			"type": "knife_thug",
+			"x": 96,
 			"y": 319
 		}
 	],
