--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -17,20 +17,45 @@ prototype: ["enemy_ground"],
 
 on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
 
-
-
 properties: {},
 
 	animation: [
 	{
+		pad: 3,
+
 		id: "idle",
+		image: "enemies/knifethug.png",
+		rect: [1, 1, 32, 33],
+		solid_area: [8, 3, 26, 32],
+		body_area:"all",
+		frames: 2,
+		duration: 15,
+		"damage": 2,
+		},
+		
+	{
+		pad: 3,
+
+		id: "walk",
 		image: "enemies/knifethug.png",
 		rect: [1, 37, 32, 69],
 		solid_area: [8, 3, 26, 32],
 		body_area:"all",
-		frames: 1,
+		frames: 2,
+		duration: 9,
 		"damage": 2,
-		accel_y: 40,
+		},
+		
+	{
+		pad: 3,
+
+		id: "knockback",
+		image: "enemies/knifethug.png",
+		rect: [71, 37, 102, 69],
+		solid_area: [8, 3, 26, 32],
+		body_area:"all",
+		frames: 1,
+		duration: 15,
 		},
 		],
 
