Added object file for Killah bee.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "044D7B38",
+			"_addr": "08B963D0",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -18,12 +18,21 @@
 			"zorder": 0
 		},
 		{
-			"_addr": "08F281B8",
+			"_addr": "08BA2AC0",
 			"current_frame": "normal",
 			"custom": 1,
-			"label": "_4022",
+			"label": "_3c8b",
+			"type": "killah_bee",
+			"x": -30,
+			"y": 260
+		},
+		{
+			"_addr": "08D400B0",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_7720",
 			"type": "knife_thug",
-			"x": 96,
+			"x": 128,
 			"y": 319
 		}
 	],
