Added animations and hit boxes for knife thug

--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -17,45 +17,48 @@ prototype: ["enemy_ground"],
 
 on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
 
+
+
 properties: {},
 
 	animation: [
-	{
-		pad: 3,
-
-		id: "idle",
+	{"@base": true,
 		image: "enemies/knifethug.png",
-		rect: [1, 1, 32, 33],
-		solid_area: [8, 3, 26, 32],
-		body_area:"all",
-		frames: 2,
-		duration: 15,
-		"damage": 2,
-		},
-		
-	{
+		solid_area: [8, 5, 26, 32],		
 		pad: 3,
-
+		accel_y: 40,
+	},
+	{
 		id: "walk",
-		image: "enemies/knifethug.png",
-		rect: [1, 37, 32, 69],
-		solid_area: [8, 3, 26, 32],
+		rect: [1, 37, 32, 69],	
 		body_area:"all",
 		frames: 2,
-		duration: 9,
-		"damage": 2,
+		duration: 10,
+		"damage": 2,	
 		},
-		
 	{
-		pad: 3,
-
-		id: "knockback",
-		image: "enemies/knifethug.png",
-		rect: [71, 37, 102, 69],
-		solid_area: [8, 3, 26, 32],
+		id: "idle",
+		rect: [1, 1, 32, 33],	
+		body_area:"all",
+		frames: 2,
+		duration: 10,
+		"damage": 2,	
+		},
+	{
+		id: "triggered",
+		rect: [71, 1, 102, 33],	
 		body_area:"all",
 		frames: 1,
-		duration: 15,
+		duration: 20,
+		"damage": 2,	
+		},
+	{
+		id: "knockback",
+		rect: [71, 37, 102, 69],	
+		body_area:"all",
+		frames: 1,
+		duration: 5,
+		"damage": 2,	
 		},
 		],
 
