Added a range and the triggering for the knife thug, and corrected some killah bee hitbox issues.

--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -3,21 +3,67 @@
 TO ADD LATER
 */
 
-/*STUFF TO FIX: 
-* Controller properties: When the player crosses the line, spawn a random amount (1-6) below the player
-*/
-
 {
 id: "knife_thug",
-editor_info: {category: "enemies"},
+editor_info: {category: "enemies",
+//var is treated like vars, but is able to be changed in the editor
+var: [
+		{
+			name: "x_bound",
+			type: "x",
+			value: "x-100",
+		},{
+			name: "x2_bound",
+			type: "x",
+			value: "x+150",
+		},{
+			name: "y_bound",
+			type: "y",
+			value: "y-100",
+		},{
+			name: "y2_bound",
+			type: "y",
+			value: "y+150",
+		},
+	],
+},
 prototype: ["enemy_ground"],
 
 "hitpoints": 3,
 
+//vars are built in variables that aren't modified by the editor
+vars:{
+	last_triggered: -400,
+	triggered: false,
+	
+	},
+
+
+
 
 on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
 
+//on the idle animation, it can branch depending on if the enemy has been triggered or not. 
+on_end_idle_anim: "[
+		if(not vars.triggered, 
+			set(animation, 'idle')), 
+		if(vars.triggered, 
+			set(animation, 'triggered'))]",
 
+//First, we are going to check to see if the player has walked into our midsts.
+//if it has, then we call the "triggered" function
+on_process: "[ 
+	if(not vars.triggered and  level.player.midpoint_x > vars.x_bound and level.player.midpoint_x < vars.x2_bound  and level.player.midpoint_y > vars.y_bound and level.player.midpoint_y < vars.y2_bound and cycle - vars.last_triggered > 250, 
+		[fire_event('triggered'),set(vars.last_triggered,cycle)]
+	),
+]",
+
+on_triggered: "[
+	debug('knife thug has been triggered'),
+	//by setting the trigger status to true, we can activate the enemy animation. See on process for details
+	set(triggered, true),
+
+]",
 
 properties: {},
 
