--- a/data/objects/enemies/killah_bee.cfg
+++ b/data/objects/enemies/killah_bee.cfg
@@ -2,11 +2,6 @@
 /*
 TO ADD LATER
 */
-
-/*STUFF TO FIX: 
-* Controller properties: When the player crosses the line, spawn a random amount (1-6) below the player
-*/
-
 {
 id: "killah_bee",
 editor_info: {category: "enemies"},
@@ -21,20 +16,18 @@ on_end_idle_anim: "set(animation, 'idle')",
 properties: {},
 
 	animation: [
-	{
+	{"@base": true,
 		pad: 3,
-
-		id: "idle",
 		image: "enemies/killah-bee.png",
-		rect: [1, 1, 38, 62],
-		soid_area: [8, 3, 26, 32],
+		solid_area: [10, 17, 28, 61],
+		accel_y: 40,
+	},
+	{id: "idle",
+		rect: [1, 1, 38, 62],	
 		body_area:"all",
 		frames: 15,
-		duration: 10,
-
-		},
-		
-	
+		duration: 5,
+		},	
 		],
 
 }
