Updated thug hurt frames, killah bee idle frames.

--- a/data/objects/enemies/killah_bee.cfg
+++ b/data/objects/enemies/killah_bee.cfg
@@ -15,8 +15,9 @@ prototype: ["enemy_ground"],
 "hitpoints": 10,
 
 
-on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
-on_end_idle_anim: "set(animation, 'idle')",
+on_create: "set(animation, 'idle_2')", //It doesn't activate until within range of the player
+on_end_idle_2_anim: "set(animation, 'idle')",
+on_end_idle_anim: "set(animation, 'idle_2')",
 
 properties: {},
 
@@ -30,7 +31,20 @@ properties: {},
 		soid_area: [8, 3, 26, 32],
 		body_area:"all",
 		frames: 15,
-		duration: 10,
+		duration: 8,
+
+		},
+		
+	{
+		pad: 3,
+
+		id: "idle_2",
+		image: "enemies/killah-bee.png",
+		rect: [411, 1, 448, 62],
+		soid_area: [8, 3, 26, 32],
+		body_area:"all",
+		frames: 5,
+		duration: 8,
 
 		},
 		
