Cleaned up the test enemy file.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "044678B8",
+			"_addr": "0A6EACF8",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -18,21 +18,39 @@
 			"zorder": 0
 		},
 		{
-			"_addr": "0446CE88",
+			"_addr": "0AB0E8D8",
 			"current_frame": "normal",
 			"custom": 1,
-			"label": "_3c8b",
+			"label": "_980",
 			"type": "killah_bee",
-			"x": -30,
-			"y": 260
+			"x": 384,
+			"y": 96
 		},
 		{
-			"_addr": "0446D2B8",
+			"_addr": "0C1684E0",
 			"current_frame": "normal",
 			"custom": 1,
-			"label": "_7720",
+			"label": "_2a05",
 			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"x2_bound": 278,
+				"x_bound": 28,
+				"y2_bound": 493,
+				"y_bound": 243
+			},
 			"x": 128,
+			"y": 319
+		},
+		{
+			"_addr": "0EA44A40",
+			"current_frame": "normal",
+			"custom": 1,
+			"face_right": 0,
+			"label": "_60c",
+			"type": "test_enemy",
+			"x": 0,
 			"y": 319
 		}
 	],
