--- a/data/objects/enemies/test_enemy.cfg
+++ b/data/objects/enemies/test_enemy.cfg
@@ -3,10 +3,6 @@
 TO ADD LATER
 */
 
-/*STUFF TO FIX: 
-* Controller properties: When the player crosses the line, spawn a random amount (1-6) below the player
-*/
-
 {
 id: "test_enemy",
 editor_info: {category: "enemies"},
@@ -15,23 +11,28 @@ prototype: ["enemy_ground"],
 "hitpoints": 5,
 
 
-on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
+on_create: "set(animation, 'idle')", 
 
 
 
 properties: {},
 
 	animation: [
+	{	"@base": true,
+		pad: 3,
+		image: "enemies/enemy.png",
+		solid_area: [8, 3, 26, 32],
+		accel_y: 40,
+	},
 	{
 		id: "idle",
-		image: "enemies/enemy.png",
 		rect: [1, 37, 32, 69],
-		solid_area: [8, 3, 26, 32],
 		body_area:"all",
 		frames: 1,
 		"damage": 2,
-		accel_y: 40,
-		},
+		duration: 1,
+	},
+		
 		],
 
 }
