Added math class and made knifethug come at you, bro

--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -40,7 +40,6 @@ vars:{
 
 
 
-
 on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
 
 //on the idle animation, it can branch depending on if the enemy has been triggered or not. 
@@ -48,7 +47,23 @@ on_end_idle_anim: "[
 		if(not vars.triggered, 
 			set(animation, 'idle')), 
 		if(vars.triggered, 
-			set(animation, 'triggered'))]",
+			set(animation, 'triggered'))
+			]",
+on_enter_walk_anim:"[
+					debug('Im walking here!'),
+					if(velocity_x > 0, set(facing, -1)),
+					if(velocity_x < 0, set(facing, 1)),
+					walk_towards(),
+					]",
+on_end_triggered_anim:"set(animation, 'walk')",
+on_end_walk_anim:"set(animation, 'walk')",
+
+on_triggered: "[
+	debug('knife thug has been triggered'),
+	//by setting the trigger status to true, we can activate the enemy animation. See on process for details
+	set(triggered, true),
+]",
+					
 
 //First, we are going to check to see if the player has walked into our midsts.
 //if it has, then we call the "triggered" function
@@ -58,14 +73,15 @@ on_process: "[
 	),
 ]",
 
-on_triggered: "[
-	debug('knife thug has been triggered'),
-	//by setting the trigger status to true, we can activate the enemy animation. See on process for details
-	set(triggered, true),
 
-]",
 
-properties: {},
+
+properties: {
+	walk_towards: "def()[
+		set(me.velocity_x, xVel),
+		debug('walking at you, bro'),]
+		where xVel = (325*cos(lib.math.angle(me,level.player)))",
+},
 
 	animation: [
 	{"@base": true,
@@ -95,7 +111,7 @@ properties: {},
 		rect: [71, 1, 102, 33],	
 		body_area:"all",
 		frames: 1,
-		duration: 20,
+		duration: 1,
 		"damage": 2,	
 		},
 	{
