--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "0A6EACF8",
+			"_addr": "08ECBD40",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -13,12 +13,12 @@
 				"objects": []
 			},
 			"type": "miyamoto_playable",
-			"x": -352,
-			"y": 319,
+			"x": 1280,
+			"y": 2048,
 			"zorder": 0
 		},
 		{
-			"_addr": "0AB0E8D8",
+			"_addr": "08CDF230",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_980",
@@ -27,7 +27,7 @@
 			"y": 96
 		},
 		{
-			"_addr": "0C1684E0",
+			"_addr": "08ED3210",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_2a05",
@@ -44,7 +44,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "0EA44A40",
+			"_addr": "08EDE458",
 			"current_frame": "normal",
 			"custom": 1,
 			"face_right": 0,
@@ -52,6 +52,16 @@
 			"type": "test_enemy",
 			"x": 0,
 			"y": 319
+		},
+		{
+			"_addr": "08EDE888",
+			"current_frame": "normal",
+			"custom": 1,
+			"face_right": 0,
+			"label": "_6c5a",
+			"type": "killah_bee",
+			"x": 1475,
+			"y": 2021
 		}
 	],
 	"dimensions": [-384,0,1983,2303],
@@ -132,7 +142,7 @@ dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,db
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr",
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr",
 		"unique_tiles": ",dbr,dgr",
 		"variations": "",
 		"x": -384,
