Added collision for MB. Damage still needs to be fixed

--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -81,12 +81,14 @@ properties: {
 		set(me.velocity_x, xVel),
 		debug('walking at you, bro'),]
 		where xVel = (325*cos(lib.math.angle(me,level.player)))",
+
 },
 
 	animation: [
 	{"@base": true,
 		image: "enemies/knifethug.png",
 		solid_area: [8, 5, 26, 32],		
+		enemy_area:"all",
 		pad: 3,
 		accel_y: 40,
 	},
@@ -96,7 +98,7 @@ properties: {
 		body_area:"all",
 		frames: 2,
 		duration: 10,
-		"damage": 2,	
+		damage: 2,	
 		},
 	{
 		id: "idle",
@@ -104,7 +106,7 @@ properties: {
 		body_area:"all",
 		frames: 2,
 		duration: 10,
-		"damage": 2,	
+		damage: 2,	
 		},
 	{
 		id: "triggered",
@@ -112,7 +114,7 @@ properties: {
 		body_area:"all",
 		frames: 1,
 		duration: 1,
-		"damage": 2,	
+		damage: 2,	
 		},
 	{
 		id: "knockback",
@@ -120,7 +122,7 @@ properties: {
 		body_area:"all",
 		frames: 1,
 		duration: 5,
-		"damage": 2,	
+		damage: 2,	
 		},
 		],
 
