--- a/data/objects/enemies/test_enemy.cfg
+++ b/data/objects/enemies/test_enemy.cfg
@@ -22,6 +22,7 @@ properties: {},
 		pad: 3,
 		image: "enemies/enemy.png",
 		solid_area: [8, 3, 26, 32],
+		enemy_area:"all",
 		accel_y: 40,
 	},
 	{
