--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -1,6 +1,6 @@
 {
 	id: "miyamoto_playable",
-	is_strict: true,
+	//is_strict: true,
 	is_human: true,
 	hitpoints: 4,
 	zorder: 1,
@@ -30,6 +30,36 @@
 		stomp_finished:"cycle - last_stomped > 32",
 		crouch_jump: {type: "int", default: -600},
 		standing_jump: -1000,
+		
+		take_damage: "def()[
+					debug('Miyamoto would take damage'),
+					dump(arg.collide_with_damage),
+					damage_flash(),
+					//add(me.hitpoints, -collide_with.damage), //subtract hitpoints
+					if(me.hitpoints <= 0, die()),
+					]",
+			//This sets the object to turn red for a brief moment and then change back to a normal color again
+	//It calls two other functions, set_red() and reset_color()			
+	damage_flash: "def() [
+		set_red(), 						// turns the enemy red
+		schedule(3, reset_color()),	//back to normal
+		schedule(6, set_red()), 		//and red again
+		schedule(9, reset_color()),	//and back to normal again
+		]",
+
+	//This sets the red channel to full and lowers the other two channels	
+	set_red: "def()[
+			set(me.red, 255),
+			set(me.blue, 100),
+			set(me.green, 100),
+			]",
+
+	//This sets all color channels  back to normal
+	reset_color: "def() [
+			set(me.red, 255),
+			set(me.blue, 255),
+			set(me.green, 255),
+			]",		
 		
 	},
 	on_process:"[
@@ -101,7 +131,16 @@ on_ctrl_jump:"[if(is_standing and punch_finished,
 on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down, [set(velocity_y,standing_jump)])]",
 
 
-
+//-----------------------------COLLISIONS----------------------------------
+on_collide_object_body: "[
+	[if(arg.collide_with_area = 'projectile', 
+		[debug('Player was hit'), 
+		take_damage(), //The player takes damage
+		])],
+	[if(arg.collide_with_area = 'enemy', 
+		[debug('Ran into the enemy'), 
+		take_damage(), //The Player takes damage
+		])] ]",
 
 
 //---------------------ON END ANIMATION ---------------------------------------
@@ -140,6 +179,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		image: "playable/miyamoto-sheet.png",
 		accel_y: 40,
 		solid_area: [20,32,10,5],
+		body_area:"all",
 		pad: 3,
 		},
 		{
