Added hurt and death animations.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -329,6 +329,28 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		frames_per_row: 4,
 		duration: 6,
 		},
+	//HURT AND DEATH ANIMATIONS
+		{
+		id: "hurt_weak", 
+        rect: [211,37,242,69],
+		frames:1,
+		frames_per_row: 1,
+		duration: 1,
+		},
+		{
+		id: "hurt_strong", 
+        rect: [176,37,207,69],
+		frames:1,
+		frames_per_row: 1,
+		duration: 1,
+		},
+		{
+		id: "death", 
+        rect: [141,37,172,69],
+		frames:1,
+		frames_per_row: 1,
+		duration: 1,
+		},
 	],
 	object_type: [
 		{
