--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -50,7 +50,7 @@ on_end_idle_anim: "[
 			set(animation, 'triggered'))
 			]",
 on_enter_walk_anim:"[
-					debug('Im walking here!'),
+					//debug('Im walking here!'),
 					if(velocity_x > 0, set(facing, -1)),
 					if(velocity_x < 0, set(facing, 1)),
 					walk_towards(),
@@ -59,7 +59,7 @@ on_end_triggered_anim:"set(animation, 'walk')",
 on_end_walk_anim:"set(animation, 'walk')",
 
 on_triggered: "[
-	debug('knife thug has been triggered'),
+	//debug('knife thug has been triggered'),
 	//by setting the trigger status to true, we can activate the enemy animation. See on process for details
 	set(triggered, true),
 ]",
@@ -79,7 +79,8 @@ on_process: "[
 properties: {
 	walk_towards: "def()[
 		set(me.velocity_x, xVel),
-		debug('walking at you, bro'),]
+		//debug('walking at you, bro'),
+		]
 		where xVel = (325*cos(lib.math.angle(me,level.player)))",
 
 },
