--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -9,6 +9,7 @@
 	
 	properties:{
 	
+	#-------Attack Timers-------#
 		last_attacked: {
 		type:"int",
 		default: 0,
@@ -30,74 +31,86 @@
 		stomp_finished:"cycle - last_stomped > 32",
 		crouch_jump: {type: "int", default: -600},
 		standing_jump: -1000,
-		
+	
+	#-------Damage Based Functions-------#
 		take_damage: "def()[
-					debug('Miyamoto would take damage'),
+				//if you aren't currently invincible, take damage
+				if(not self.invincible,[
 					dump(arg.collide_with_damage),
 					damage_flash(),
 					//add(me.hitpoints, -collide_with.damage), //subtract hitpoints
 					if(me.hitpoints <= 0, die()),
+					set(invincible, 50),
+				]),
 					]",
-			//This sets the object to turn red for a brief moment and then change back to a normal color again
-	//It calls two other functions, set_red() and reset_color()			
-	damage_flash: "def() [
-		set_red(), 						// turns the enemy red
-		schedule(3, reset_color()),	//back to normal
-		schedule(6, set_red()), 		//and red again
-		schedule(9, reset_color()),	//and back to normal again
-		]",
-
-	//This sets the red channel to full and lowers the other two channels	
-	set_red: "def()[
-			set(me.red, 255),
-			set(me.blue, 100),
-			set(me.green, 100),
+		//This sets the object to turn red for a brief moment and then change back to a normal color again
+		//It calls two other functions, set_red() and reset_color()			
+		damage_flash: "def() [
+			set_red(), 						// turns the enemy red
+			schedule(3, reset_color()),	//back to normal
+			schedule(6, set_red()), 		//and red again
+			schedule(9, reset_color()),	//and back to normal again
 			]",
 
-	//This sets all color channels  back to normal
-	reset_color: "def() [
-			set(me.red, 255),
-			set(me.blue, 255),
-			set(me.green, 255),
-			]",		
+		//This sets the red channel to full and lowers the other two channels	
+		set_red: "def()[
+				set(me.red, 255),
+				set(me.blue, 100),
+				set(me.green, 100),
+				]",
+
+		//This sets all color channels  back to normal
+		reset_color: "def() [
+				set(me.red, 255),
+				set(me.blue, 255),
+				set(me.green, 255),
+				]",	
+				
+	#-------Animation Groups-------#
+		stomp_animations: "['beginstomp', 'landstomp', 'endstomp', 'fallstomp']",	
+		uppercut_animations: "['beginuppercut', 'uppercut', 'enduppercut']",
+		kick_animations: "['flying_kick_start', 'flying_kick', 'jumping_kick_start', 'jumping_kick']",
+		jump_animations: "['prejump', 'jump', 'fall']",
+		attack_animations: "['punch1'] + uppercut_animations + kick_animations + stomp_animations",
 		
 	},
+	
+	
 	on_process:"[
 		//------------------------------WALKING----------------------------------
-		if(ctrl_right and is_standing and punch_finished and animation != ['crouch','endstomp','landstomp'], [
+		if(ctrl_right and is_standing and punch_finished and animation not in ['crouch'] + stomp_animations, [
 			set(facing,1),
 			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
 			set(velocity_x, 300)]), 
-		if(ctrl_left and is_standing and punch_finished and animation != ['crouch','endstomp','landstomp'], [
+		if(ctrl_left and is_standing and punch_finished and animation not in stomp_animations, [
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1','beginuppercut','uppercut','enduppercut','landstomp','endstomp','fallstomp']), //allows a list of excluded animations
+		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1'] + uppercut_animations + stomp_animations), //allows a list of excluded animations
 			[set(animation, 'stand')]),
 			
 		if((ctrl_down and ctrl_tongue) and self.animation not in ['axehandle'] and self.animation in ['jump', 'fall'],
 			set(animation, 'axehandle')),
 			
 		//-------------------------------CROUCHING-------------------------------
-		if ((ctrl_down and self.animation in ['stand','crouch','walk'] and self.animation not in ['punch1']), 
-	[
+		if ((ctrl_down and self.animation in ['stand','crouch','walk'] and self.animation not in attack_animations), 
+		[
 			set(animation, 'crouch'),
 			set(velocity_x, 0)]),	
 		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1)]),
 		if ((ctrl_right and self.animation='crouch'),[ set(facing,1)]),
 		//-------------------------------ATTACKING-------------------------------
+	]",
 
-
-]",
-
+	
 	on_ctrl_tongue:"[
 //-AERIAL ATTACKS ****************************************************************************************
-		if(animation in ['prejump','jump','fall'] and velocity_x = 0,
+		if(animation in jump_animations and velocity_x = 0,
 			set(animation, 'jumping_kick_start')), //Jumping kick attack when there's no momentum
-		if(animation in ['prejump','jump','fall'] and velocity_x != 0,
+		if(animation in jump_animations and velocity_x != 0,
 			set(animation,'flying_kick_start')), //Flying kick attack when there is momentum
 //-GROUND ATTACKS ****************************************************************************************
-		if(ctrl_tongue and animation != 'punch1' and is_standing and not animation in ['jump','fall','crouch','beginuppercut','uppercut','enduppercut'], 
+		if(ctrl_tongue and animation != 'punch1' and is_standing and not animation in ['crouch'] + jump_animations + uppercut_animations, 
 			if(punch_finished,
 				[set(animation, 'punch1'),
 				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
@@ -110,7 +123,7 @@
 				[set(animation, 'beginuppercut'), set(last_attacked,cycle), spawn('miyamoto_playable.uppercut_proj',mid_x+18*facing,mid_y-25,{facing:facing})],
 				),
 			),
-		]",
+	]",
 	on_process_jump:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
 	
 	on_process_fall:"if(ctrl_keys=['d'], set(animation,'beginstomp'))",
@@ -122,7 +135,7 @@
 on_ctrl_jump:"[if(is_standing and punch_finished, 
 					[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
 				
-					if (animation != ['jump','prejump','fall'], set(animation, 'prejump')),
+					if (animation != [jump_animations], set(animation, 'prejump')),
 					set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
 					//add some x velocity to increase jump distance.
 					if(self.animation in ['crouch'], 
